--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -9,13 +9,13 @@ env:
   RUSTC_WRAPPER: sccache
   SCCACHE_GHA_ENABLED: true
 jobs:
-
   tests:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
         with:
           submodules: true
+          fetch-depth: 0
       - uses: dtolnay/rust-toolchain@stable
       - name: Cache Rust registry based on toml file
         uses: actions/cache@v3
@@ -31,6 +31,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           submodules: true
+          fetch-depth: 0
       - uses: dtolnay/rust-toolchain@stable
       - name: Cache Rust registry based on toml file
         uses: actions/cache@v3
@@ -46,7 +47,10 @@ jobs:
       - uses: actions/checkout@v4
         with:
           submodules: true
-      - uses: dtolnay/rust-toolchain@stable
+          fetch-depth: 0
+      - uses: dtolnay/rust-toolchain@nightly
+        with:
+          components: rustfmt
       - name: Cache Rust registry based on toml file
         uses: actions/cache@v3
         with:
