--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ members = [".", "ytmimi--markdown-fmt"]
 
 [package]
 name = "fmtm"
-version = "0.0.1"
+version = "0.0.0"
 edition = "2021"
 description = "A diff-friendly Markdown formatter that breaks lines on sensible punctuations and words to fit a line width."
 license = "MIT"
@@ -15,7 +15,7 @@ repository = "https://github.com/SichangHe/fmtm"
 anyhow = "1"
 clap = { version = "4", features = ["derive"] }
 fmtt = "0.6"
-markdown-fmt = { version = "0.1", path = "ytmimi--markdown-fmt" }
+markdown-fmt = { package = "fmtm_ytmimi_markdown_fmt", version = "0.0.1", path = "ytmimi--markdown-fmt" }
 tracing = { version = "0.1", default_features = false }
 tracing-subscriber = { version = "0.3", default_features = false, features = [
     "ansi",
